# ops

./: .gitattributes  .gitignore  .project  AdvancedReferenceHandling.md  BasicConcepts.md  BuildInstructions.md  Build_Idl_Compiler.bat  BuildingExamples.md  CMakeLists.txt  CSharpSample.md  DataSlicing.md  ExternalTools.md  FooTopic.md  HelloWorldExample.md  IDLLanguage.md  InstallBoost.md  Jenkinsfile  LargeMessages.md  Makefile  MulticastTransport.md  NamingConventions.md  OpsConfig.md  PageName.md  ProjectHome.md  PublisherName.md  Readme.md  SubscribingToTopic.md  UsingDeadline.md  clean-x64.bat  clean.bat  makefile-clang  run-cmake-x64.bat  run-cmake.bat
CSharp/: CMakeLists.txt
CSharp/Ops/: CMakeLists.txt  Channel.cs  Domain.cs  Exceptions.cs  InetAddress.cs  McSendDataHandler.cs  McUdpSendDataHandler.cs  MulticastSender.cs  OPSConfig.cs  OPSConfigRepository.cs  OPSObject.cs  Participant.cs  ParticipantInfoDataListener.cs  Publisher.cs  ReceiveDataHandler.cs  ReceiveDataHandlerFactory.cs  ReceiverFactory.cs  SendDataHandlerFactory.cs  Subscriber.cs  Topic.cs  Transport.cs  UdpReceiver.cs  WriteByteBuffer.cs
CSharp/Ops/Archiver/: ArchiverInOut.cs  OPSArchiverIn.cs  OPSArchiverOut.cs  OPSObjectFactory.cs  XMLArchiverIn.cs  XMLArchiverOut.cs
CSharp/Ops/Utilities/: ExceptionLogger.cs
CSharp/Projects/OpsLibrary/: OpsLibrary.sln
Common/: CMakeLists.txt
Common/idl/: CMakeLists.txt  DebugRequestResponseData.idl  OPSConstants.idl  build.bat
Cpp/: .gitignore  CMakeLists.txt  OPSStringLengths.h.in  Readme.md  makefile_linux.include  makefile_linux_arm  makefile_linux_x64
Cpp/Visual C++/: .gitignore
Cpp/Visual C++/OPSCrossPlatformCppSolution/: OPSCrossPlatformCppSolution.sln
Cpp/Visual C++/OPSCrossPlatformCppSolution_2010/: OPSCrossPlatformCppLib_2010.sln
Cpp/Visual C++/OPSCrossPlatformCppSolution_2012/: OPSCrossPlatformCppLib_2012.sln
Cpp/Visual C++/OPSCrossPlatformCppSolution_2013/: OPSCrossPlatformCppLib_2013.sln
Cpp/Visual C++/OPSCrossPlatformCppSolution_2015/: OPSCrossPlatformCppLib_2015.sln
Cpp/Visual C++/OPSCrossPlatformCppSolution_2017/: OPSCrossPlatformCppLib_2017.sln
Cpp/Visual C++/OPSCrossPlatformCppSolution_2019/: OPSCrossPlatformCppLib_2019.sln
Cpp/include/: ArchiverInOut.h  ArchiverIn_deprecated.h  ArchiverOut_deprecated.h  ByteBuffer.h  BytesSizePair.h  Channel.h  ChecksumArchiver.h  CommException.h  ConfigException.h  ConnectStatus.h  DataNotifier.h  DeadlineMissedListener.h  DeadlineTimer.h  DebugHandler.h  Domain.h  Error.h  ErrorService.h  ErrorWriter.h  FilterQoSPolicy.h  IOService.h  KeyFilterQoSPolicy.h  Lockable.h  MemoryMap.h  NetworkSupport.h  NoSuchTopicException.h  Notifier.h  OPSArchiverIn.h  OPSArchiverOut.h  OPSConfig.h  OPSConfigRepository.h  OPSConstants.h  OPSEvent.h  OPSExport.h  OPSMessage.h  OPSObject.h  OPSObjectFactory.h  OPSTypeDefs.h  OPSUtilities.h  Participant.h  ParticipantInfoData.h  (+32 more)
Cpp/include/ops/: DebugRequestResponseData.h  DebugRequestResponseDataPublisher.h  DebugRequestResponseDataSubscriber.h  Reply.h  Request.h  opsTypeFactory.h
Cpp/include/opsidls/: DebugRequestResponseData.h  DebugRequestResponseDataPublisher.h  DebugRequestResponseDataSubscriber.h  opsidlsTypeFactory.h
Cpp/source/: ArchiverInOut.cpp  BasicError.h  BasicWarning.h  BoostDeadlineTimerImpl.h  BoostIOServiceImpl.h  ByteBuffer.cpp  CMakeLists.txt  Channel.cpp  Compatibility.cpp  DataNotifier.cpp  DataSegmentPool.cpp  DataSegmentPool.h  DeadlineTimer.cpp  DebugHandler.cpp  DefaultOPSConfigImpl.h  Domain.cpp  ErrorService.cpp  IOService.cpp  KeyFilterQoSPolicy.cpp  Lockable.cpp  MCReceiveDataHandler.cpp  MCReceiveDataHandler.h  McSendDataHandler.h  McUdpSendDataHandler.h  MultiThreadPool.h  MulticastReceiver.cpp  MulticastReceiver.h  NetworkSupport.cpp  OPSArchiverIn.cpp  OPSConfig.cpp  OPSConfigRepository.cpp  OPSConstants.cpp  OPSEvent.cpp  OPSObject.cpp  OPSObjectFactory.cpp  OPSObjectFactoryImpl.h  Participant.cpp  ParticipantInfoDataListener.cpp  Publisher.cpp  ReceiveDataChannel.cpp  (+44 more)
Examples/: .gitignore  Build_Idls.bat  CMakeLists.txt  Clean_Idls.bat  PizzaTest.bat  VerSerDes.bat
Examples/AdaApps/: .gitignore
Examples/CppApps/: CMakeLists.txt  ConfigFileHelper.cpp  ConfigFileHelper.h
Examples/DelphiApps/: .gitignore
Examples/HelloRequesterCppImpl/: CMakeLists.txt  RequestHelloTopic_pub.cpp  RequestHelloTopic_sub.cpp  ops_config.xml
Examples/HelloWorldCppImpl/: CMakeLists.txt  HelloTopic_pub.cpp  HelloTopic_sub.cpp
Examples/HelloWorldWithKeyCppImpl/: CMakeLists.txt  HelloTopic_pub.cpp  HelloTopic_sub.cpp
Examples/JavaApps/: CMakeLists.txt
Examples/OPSIdls/: .gitignore  CMakeLists.txt
Examples/PizzaTest/: .gitignore
Examples/VC++Apps/: .gitignore
Python/: .gitignore  CMakeLists.txt  MANIFEST.in  OPS_test.py  PY.py  PY_factory.py  PizzaData.py  PizzaProjectTypeFactory.py  README.txt  ops_config.xml  pizza.py  pizza_special.py  setup.py.in
Python/ops/: Archiver.py  Checksum_Archiver.py  Constants.py  DataAssembly.py  Factory.py  OPS_Archiver.py  Participant.py  ParticipantInfoData.py  Print_Archiver.py  Publisher.py  ReceiveDataHandler.py  SendDataHandler.py  Subscriber.py  Support.py  XML_Archiver.py  opsTypes.py
Tools/: CMakeLists.txt  Readme.txt
Tools/DebugConsole/: .gitignore  CMakeLists.txt  DebugConsole.sln  DebugConsole.vcxproj
Tools/IDLCompiler/: CMakeLists.txt
Tools/IDLParser/: Build_Lib.bat  Gen_IDL_Parser.bat
Tools/NBOPSIDLSupport/: Build_Lib.bat
Tools/OPSBridge/: .gitignore  CMakeLists.txt  opsbridge_config.xml
Tools/OPSCompilerLib/: Build_Lib.bat
Tools/OPSListener/: .gitignore  CMakeLists.txt  argfile-example.txt  argfile-linked.txt  makefile_linux_x64
Tools/OPSReflectionLib/: CMakeLists.txt
Tools/VerifyOPSConfig/: .gitignore  VerifyOPSConfig.sln  VerifyOPSConfig.vcxproj
Tools/opsc/: Build_opsc.bat  CMakeLists.txt  opsc.bat  opsc.bat.in  opsc.sh
UnitTests/OPStest/: CMakeLists.txt  README.md  ops_config.xml  pizzatest-xml.sh  pizzatest.sh
UnitTests/OPStest-C++/: .cproject  .gitignore  .project  CMakeLists.txt  README.md  pizzatest-xml.sh  pizzatest.bat  pizzatest.sh
(+750 files in other folders)
