
add_subdirectory(HelloReplierJavaImpl/src)

add_subdirectory(HelloWorldJavaImpl/src)

add_subdirectory(HelloWorldWithKeyJavaImpl/src)

add_subdirectory(PizzaTest/src)

add_subdirectory(SimpleChatSenderJavaImpl/src)

add_subdirectory(TestAllJavaTest/TestAllJavaTestPublisher/src)
add_subdirectory(TestAllJavaTest/TestAllJavaTestSubscriber/src)
