
add_subdirectory(HelloReplierJavaImpl/src)

add_subdirectory(HelloWorldJavaImpl/src)

add_subdirectory(HelloWorldWithKeyJavaImpl/src)

# Add two variants that uses the PizzaProject IDLs
add_subdirectory(OpsTestApp/src)
add_subdirectory(PizzaTest/src)

add_subdirectory(SimpleChatSenderJavaImpl/src)

add_subdirectory(TestAll/src)
add_subdirectory(TestAllJavaTest/TestAllJavaTestPublisher/src)
add_subdirectory(TestAllJavaTest/TestAllJavaTestSubscriber/src)
